# yggdrasil-mc

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml
example/: get_uuid.py
examples/: example1.py
src/yggdrasil_mc/: __init__.py  model.py  wrapper.py  ygg.py  ygg_async.py
tests/: test_async.py
yggdrasil_mc/: client.py  exceptions.py  models.py  utils.py
