[tool.poetry]
name = "yggdrasil-mc"
version = "0.2.4"
description = "A simple Python lib to get player info and texture from Mojang and Yggdrasil APIs. / 一个简单的 Python 库，可从 Mojang 和 Yggdrasil APIs 获取玩家的信息和材质。"
license = "AGPL-3.0-or-later"
authors = ["SerinaNya <34389622+SerinaNya@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/SerinaNya/yggdrasil-mc"
repository = "https://github.com/SerinaNya/yggdrasil-mc"
keywords = ["yggdrasil", "mc", "api", "mcapi", "mojang", "minecraft", "littleskin", "blessing skin"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Framework :: Pydantic :: 2",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/SerinaNya/yggdrasil-mc/issues"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = ">=2"
httpx = {extras = ["http2", "socks"], version = ">=0.20.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"


[[tool.poetry.source]]
name = "sjtu"
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
